--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apoyo-prueba---elecciones-presidenciales",
+  "name": "prueba---elecciones-presidenciales",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,11 @@
     "dev": "node --watch index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Isabel Rojas",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.11.5"
   }
 }
